# libiso8601

./: .travis.functions  .travis.install  .travis.script  .travis.yml  Makefile.am  add.c  configure.ac  internal.c  internal.h  iso8601.h  libiso8601.map  libiso8601.sym  meson.build  misc.c  parse.c  t_internal.c  t_misc.c  t_parse.c  t_unparse.c  unparse.c
src/: internal.c  internal.h  iso8601.h  misc.c  parse.c  unparse.c
tests/: Makefile.am  internal.c  misc.c  parse.c
